--- a/inventory/templates/inventory/core_detail.html
+++ b/inventory/templates/inventory/core_detail.html
@@ -117,7 +117,7 @@ function delconfirm() {
 <table class="table table-sm table-borderless table-hover" width='100%'>
   <thead>
   <tr>
-    <th>Downstreams</th>
+    <th>Downstream</th>
     <th>
       {% if user.is_authenticated %}
         {% for group in  request.user.groups.all %}
