--- a/inventory/templates/inventory/customer_detail.html
+++ b/inventory/templates/inventory/customer_detail.html
@@ -56,7 +56,7 @@ function delconfirm() {
 <table class="table table-sm table-borderless table-hover" width='100%'>
   <thead>
   <tr>
-    <th>Upstream</th>
+    <th>Upstreams</th>
     <th>
       {% if user.is_authenticated %}
         {% for group in  request.user.groups.all %}
