1. Comments fixed 2. Subnetmask added 3. Redirects fixed

--- a/inventory/templates/inventory/core_detail.html
+++ b/inventory/templates/inventory/core_detail.html
@@ -60,6 +60,17 @@ function delconfirm() {
 <table class="table table-sm table-borderless table-hover" width='100%'>
   <thead>
   <tr>
+    <th>Комментарии</th>
+  </tr>
+</thead>
+<tr>
+  <td>{{ core.comments|linebreaksbr }}</td>
+</tr>
+</tables>
+
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
     <th>Оборудование</th>
     <th></th>
     <th>
