--- a/inventory/templates/inventory/core_edit.html
+++ b/inventory/templates/inventory/core_edit.html
@@ -32,6 +32,10 @@
       <td>vlan-ы:</td>
       <td>{{ form.vlans }}</td>
     </tr>
+    <tr>
+      <td>Комментарий:</td>
+      <td>{{ form.comments }}</td>
+    </tr>
   </table>
   <table style="margin-button: 10px">
     <tr>
