--- a/inventory/templates/inventory/ipv4_detail.html
+++ b/inventory/templates/inventory/ipv4_detail.html
@@ -70,6 +70,10 @@ function delconfirm() {
     <td>{{ ipfrom }} - {{ ipto }}</td>
   </tr>
   <tr>
+    <td>Маска подсети:</td>
+    <td>{{ mask }}</td>
+  </tr>
+  <tr>
     <td>Шлюз по умолчанию:</td>
     <td>{{ gw }}</td>
   </tr>
