subnet check added

--- a/inventory/templates/inventory/customer_list.html
+++ b/inventory/templates/inventory/customer_list.html
@@ -4,7 +4,7 @@
 <table class="table table-sm table-borderless table-hover" width='100%'>
   <thead>
     <tr>
-      <th>Опорный узел</th>
+      <th>Клиент</th>
       <th>Адрес</th>
       <th>Подключение</th>
       <th>
