Cancel button fixed

--- a/inventory/templates/inventory/ipv4_edit.html
+++ b/inventory/templates/inventory/ipv4_edit.html
@@ -28,8 +28,8 @@
     <tr>
       <td>
         <button class="btn btn-dark btn-sm" style="height: 32px; width: 100px; margin-top: 10px" type="submit">СОХРАНИТЬ</button>
-        <button class="btn btn-dark btn-sm" style="height: 32px; width: 100px; margin-top: 10px" type="cancel" onclick="window.history.back()">ОТМЕНА</button>
-       </td>
+        <input class="btn btn-dark btn-sm" style="height: 32px; width: 100px; margin-top: 10px" type="button" value="ОТМЕНА" onclick="window.history.back()">
+      </td>
     </tr>
     </table>
 </form>
