--- a/inventory/templates/inventory/device_edit.html
+++ b/inventory/templates/inventory/device_edit.html
@@ -32,7 +32,7 @@
   <tr>
     <td>
       <button class="btn btn-dark btn-sm" style="height: 32px; width: 100px; margin-top: 10px" type="submit">СОХРАНИТЬ</button>
-      <button class="btn btn-dark btn-sm" style="height: 32px; width: 100px; margin-top: 10px" type="cancel" onclick="window.history.back()">ОТМЕНА</button>
+      <input class="btn btn-dark btn-sm" style="height: 32px; width: 100px; margin-top: 10px" type="button" value="ОТМЕНА" onclick="window.history.back()">
      </td>
   </tr>
   </table>
