--- a/inventory/templates/inventory/device_edit.html
+++ b/inventory/templates/inventory/device_edit.html
@@ -8,15 +8,7 @@
     <th>Коммутатор:</th>
   </thead>
   <tr>
-    <td width="15%">Производитель:</td>
-    <td>{{ form.vendor }}</td>
-  </tr>
-  <tr>
-    <td>Модель:</td>
-    <td>{{ form.model }}</td>
-  </tr>
-  <tr>
-    <td>Имя:</td>
+    <td width="15%">Имя:</td>
     <td>{{ form.dnsname }}</td>
   </tr>
   <tr>
@@ -27,6 +19,23 @@
     <td>Адрес:</td>
     <td>{{ form.geoaddress }}</td>
   </tr>
+  <tr>
+    <td>Комментарий:</td>
+    <td>{{ form.comments }}</td>
+  </tr>
+  <tr>
+    <td>Производитель:</td>
+    <td>{{ form.vendor }}</td>
+  </tr>
+  <tr>
+    <td>Модель:</td>
+    <td>{{ form.model }}</td>
+  </tr>
+  <tr>
+    <td>Серийный номер:</td>
+    <td>{{ form.serialnum }}</td>
+  </tr>
+
 </table>
 <table style="margin-button: 10px">
   <tr>
