--- a/inventory/templates/inventory/ipv4_detail.html
+++ b/inventory/templates/inventory/ipv4_detail.html
@@ -66,6 +66,11 @@ function delconfirm() {
     <td>{{ ipv4network.comment|linebreaksbr }}</td>
   </tr>
   <tr>
+    <td>Детали:</td>
+    <td>{{ ipv4network.detail|linebreaksbr }}</td>
+  </tr>
+  <tr>
+  <tr>
     <td>IP-адреса:</td>
     <td>{{ ipfrom }} - {{ ipto }}</td>
   </tr>
