--- a/inventory/templates/inventory/ipv4_edit.html
+++ b/inventory/templates/inventory/ipv4_edit.html
@@ -23,6 +23,10 @@
       <td>Комментарий:</td>
       <td>{{ form.comment }}</td>
     </tr>
+    <tr>
+      <td>Детали:</td>
+      <td>{{ form.detail }}</td>
+    </tr>
   </table>
   <table style="margin-button: 10px">
     <tr>
