--- a/inventory/templates/inventory/pop_detail.html
+++ b/inventory/templates/inventory/pop_detail.html
@@ -116,13 +116,13 @@ function delconfirm() {
   <tr class="table-active">
     <td width='30%'>Сеть:</td>
     <td>Описание:</td>
-    <td></td>
+    <td>Детали:</td>
   </tr>
   {% for n in network %}
   <tr>
     <td width='30%'><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
     <td>{{ n.comment }}</td>
-    <td></td>
+    <td>{{ n.detail }}</td>
   </tr>
   {% endfor %}
 </table>
