--- a/inventory/templates/inventory/ipv4_detail.html
+++ b/inventory/templates/inventory/ipv4_detail.html
@@ -66,11 +66,6 @@ function delconfirm() {
     <td>{{ ipv4network.comment|linebreaksbr }}</td>
   </tr>
   <tr>
-    <td>Детали:</td>
-    <td>{{ ipv4network.detail|linebreaksbr }}</td>
-  </tr>
-  <tr>
-  <tr>
     <td>IP-адреса:</td>
     <td>{{ ipfrom }} - {{ ipto }}</td>
   </tr>
@@ -89,6 +84,18 @@ function delconfirm() {
   <tr>
     <td>Вторичный DNS:</td>
     <td>188.65.130.130</td>
+  </tr>
+</table>
+
+
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Детали:</th>
+  </tr>
+  </thead>
+  <tr>
+    <td>{{ ipv4network.detail|linebreaksbr }}</td>
   </tr>
 </table>
 {% endblock %}
