--- a/inventory/templates/inventory/pop_detail.html
+++ b/inventory/templates/inventory/pop_detail.html
@@ -200,6 +200,7 @@ function delconfirm() {
   <thead>
   <tr>
     <th>Клиенты:</th>
+    <th></th>
     <th>
       {% if user.is_authenticated %}
         {% for group in  request.user.groups.all %}
@@ -213,8 +214,9 @@ function delconfirm() {
 </thead>
   {% for z in downstream %}
   <tr>
-    <td width='30%'>Клиент:</td>
-    <td><a href="{% url 'customer_detail' pk=z.pk %}">{{ z }}</a</td>
+    <td width='15%'>Клиент:</td>
+    <td width='30%'><a href="{% url 'customer_detail' pk=z.pk %}">{{ z }}</a</td>
+    <td>{{ z.switch|linebreaksbr }} <b>vlan:</b>{{ z.vlans|linebreaksbr }}</td>
   </tr>
   {% endfor %}
 </table>
