--- a/inventory/templates/inventory/pop_detail.html
+++ b/inventory/templates/inventory/pop_detail.html
@@ -200,6 +200,7 @@ function delconfirm() {
   <thead>
   <tr>
     <th>Клиенты:</th>
+    <th></th>
     <th>
       {% if user.is_authenticated %}
         {% for group in  request.user.groups.all %}
@@ -213,12 +214,14 @@ function delconfirm() {
 </thead>
   <tr class="table-active">
     <td>Клиент:</td>
-    <td>Подключение:</td>
+    <td>Коммутатор:</td>
+    <td>VLAN:</td>
   </tr>
   {% for z in downstream %}
   <tr>
     <td><a href="{% url 'customer_detail' pk=z.pk %}">{{ z }}</a</td>
-    <td>{{ z.switch|linebreaksbr }} <b>vlan:</b>{{ z.vlans|linebreaksbr }}</td>
+    <td>{{ z.switch|linebreaksbr }}</td>
+    <td>{{ z.vlans|linebreaksbr }}</td>
   </tr>
   {% endfor %}
 </table>
