--- a/channels/templates/channels/base_channels.html
+++ b/channels/templates/channels/base_channels.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-
 <!doctype html>
 <html>
 <head>
@@ -11,7 +10,9 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-</head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/select2.min.css' %}" type="text/css">
+    <script src="{% static 'js/select2.min.js' %}"></script>
 <body>
   <link rel="stylesheet" href="https://d19m59y37dris4.cloudfront.net/universal/2-0-1/vendor/font-awesome/css/font-awesome.min.css">
 <div class="top-bar">
@@ -28,19 +29,19 @@
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-dark">
-            <a href="#" class="navbar-brand">ИНТЕРНЕТ</a>
+            <a href="#" class="navbar-brand">КАНАЛЫ СВЯЗИ</a>
             <button class="navbar-toggler" type="button" data-target="#navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="/internet/cores/" class="nav-link">Интернет</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Телефония</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="/channels/l2vpn/" class="nav-link">Каналы связи</a>
                     </li>
                     <li class="nav-item">
@@ -51,7 +52,15 @@
                     </li>
                 </ul>
             </div>
-        </nav>
+            <form class="form-inline" action="{% url 'l2vpn_list' %}">
+                <input type="text" class="form-control form-control-sm" placeholder="Найти канал..." name="search">
+                <div class="input-group-append">
+                  <button class="btn btn-secondary btn-sm" type="submit">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </div>
+            </form>
+</nav>
 
 <div class="container-fluid">
   <div class="row">
@@ -61,27 +70,15 @@
           <!--Note: declare the Menu style in the data-menu-style="horizontal" (options: horizontal, vertical, accordion) -->
           <ul id="respMenu" class="ace-responsive-menu" data-menu-style="vertical">
               <li>
-                  <a href="/internet/cores/">
-                      <i class="fa fa-globe" aria-hidden="true"></i>
-                      <span class="title">Опорные узлы</span>
+                  <a href="/channels/l2vpn/">
+                      <i class="fa fa-at" aria-hidden="true"></i>
+                      <span class="title">L2VPN</span>
                   </a>
               </li>
               <li>
-                  <a href="/internet/pops/">
-                      <i class="fa fa-home" aria-hidden="true"></i>
-                      <span class="title">Точки присутствия</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="/internet/customers/">
-                      <i class="fa fa-users" aria-hidden="true"></i>
-                      <span class="title">Клиенты</span>
-                  </a>
-              </li>
-              <li>
-                  <a class="" href="#">
-                      <i class="fa fa-lock" aria-hidden="true"></i>
-                      <span class="title">Блокировки</span>
+                  <a href="#">
+                      <i class="fa fa-phone" aria-hidden="true"></i>
+                      <span class="title">L3VPN</span>
                   </a>
               </li>
           </ul>
@@ -100,36 +97,33 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">
-      <h5>Служба поддержки</h5>
+      <h3>Служба поддержки</h3>
       <p><strong>Email:</strong> support@netone.ru
       <br><strong>Tel.:</strong> +7 (495) 646 2800
       </div>
       <div class="col-md-2 list">
         <ul>
           <li><a href="/internet/cores/">Интернет</a></li>
-          <li><a href="/telephony/">Телефония</a></li>
-          <li><a href="#">Каналы связи</a></li>
+          <li><a href="#">Телефония</a></li>
+          <li><a href="/channels/l2vpn/">Каналы связи</a></li>
           <li><a href="/inventory/pd/">Учет оборудования</a></li>
           <li><a href="/ipam/ipv4/">Учет ресурсов IPv4/IPv6</a></li>
         </ul>
       </div>
       <div class="col-md-2 list">
         <ul>
-          <li><a href="/internet/cores/">Опорные узлы</a></li>
-          <li><a href="/internet/pops/">Точки присутствия</a></li>
-          <li><a href="/internet/customers/">Клиенты</a></li>
-          <li><a href="#">Блокировки</a></li>
+          <li><a href="/channels/l2vpn/">L2VPN</a></li>
+          <li><a href="#">L3VPN</a></li>
         </ul>
       </div>
       <div class="col-md-2">
       </div>
       <div class="col-md">
-        <h5>Контакты</h5>
+        <h5><strong>Контакты</strong></h5>
         <strong>Адрес:</strong> 115035, Москва, Садовническая набережная, д. 69
         <br><strong>Email:</strong> noc@netone.ru
         <br><strong>Tel.:</strong> +7 (495) 646 2888
       </div>
     </div>
-</footer>
 </body>
 </html>
