--- a/inventory/templates/inventory/base_ipam.html
+++ b/inventory/templates/inventory/base_ipam.html
@@ -40,7 +40,7 @@
                         <a href="#" class="nav-link">Телефония</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Каналы связи</a>
+                        <a href="/channels/l2vpn/" class="nav-link">Каналы связи</a>
                     </li>
                     <li class="nav-item">
                         <a href="/inventory/pd/" class="nav-link">Учет оборудования</a>
