Speed field added

--- a/channels/templates/channels/l2vpn_detail.html
+++ b/channels/templates/channels/l2vpn_detail.html
@@ -79,6 +79,10 @@ function delconfirm() {
     <td>{{ l2vpn.vlan }}</td>
   </tr>
   <tr>
+    <td>Скорость:</td>
+    <td>{{ l2vpn.speed }}</td>
+  </tr>
+  <tr>
     <td>Примечание:</td>
     <td>{{ l2vpn.comments|linebreaksbr }}</td>
   </tr>
