--- a/channels/templates/channels/l2vpn_edit.html
+++ b/channels/templates/channels/l2vpn_edit.html
@@ -59,6 +59,10 @@ $(document).ready(function() {
       <td>{{ form.vlan }}</td>
     </tr>
     <tr>
+      <td>Скорость</td>
+      <td>{{ form.speed }}</td>
+    </tr>
+    <tr>
       <td>Примечание</td>
       <td>{{ form.comments }}</td>
     </tr>
