New DEV branch with ipam as app

--- a/ipam/templates/ipam/ipv4_detail.html
+++ b/ipam/templates/ipam/ipv4_detail.html
@@ -1,4 +1,4 @@
-{% extends 'inventory/base_ipam.html' %}
+{% extends 'ipam/base_ipam.html' %}
 {% block content %}
 
 {% if user.is_authenticated %}
