--- a/ipam/templates/ipam/ipv4_list.html
+++ b/ipam/templates/ipam/ipv4_list.html
@@ -1,4 +1,4 @@
-{% extends 'inventory/base_ipam.html' %}
+{% extends 'ipam/base_ipam.html' %}
 {% block content %}
 
 <table class="table table-sm table-borderless table-hover" width='100%'>
